--- a/aoc-y2022.cabal
+++ b/aoc-y2022.cabal
@@ -1,6 +1,6 @@
 cabal-version: 1.12
 
--- This file has been generated from package.yaml by hpack version 0.34.7.
+-- This file has been generated from package.yaml by hpack version 0.35.0.
 --
 -- see: https://github.com/sol/hpack
 
@@ -26,6 +26,8 @@ source-repository head
 library
   exposed-modules:
       Lib
+      Seven
+      Util
   other-modules:
       Paths_aoc_y2022
   hs-source-dirs:
@@ -33,6 +35,7 @@ library
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints
   build-depends:
       base >=4.7 && <5
+    , mtl
   default-language: Haskell2010
 
 executable aoc-y2022-exe
@@ -45,6 +48,7 @@ executable aoc-y2022-exe
   build-depends:
       aoc-y2022
     , base >=4.7 && <5
+    , mtl
   default-language: Haskell2010
 
 test-suite aoc-y2022-test
@@ -58,4 +62,5 @@ test-suite aoc-y2022-test
   build-depends:
       aoc-y2022
     , base >=4.7 && <5
+    , mtl
   default-language: Haskell2010
